--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,6 +50,8 @@ collections:
                 fields:
                   - { label: Label, name: label, widget: string, required: false, default: '', }
                   - { label: Placeholder, name: placeholder, widget: string, required: false, default: '', }
+                  - { label: Name, name: name, widget: string, required: true}
+                  - { label: Info Label, name: infoLabel, widget: string, required: false, default: '', }
           - {
               label: Button label,
               name: buttonLabel,
