--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-source-filesystem": "^2.0.28",
+    "gatsby-source-graphql": "^2.0.18",
+    "gatsby-source-strapi": "0.0.8",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
     "netlify-cms": "^2.9.0",
